# Criterion

./: CMakeLists.txt
.cmake/Modules/: Capabilities.cmake  Cram.cmake  Options.cmake
doc/: Doxyfile
include/criterion/: types.h
include/criterion/internal/: common.h
po/: de.po  fr.po
src/: CMakeLists.txt  common.h
src/compat/: alloc.c  alloc.h  basename.c  basename.h  internal.h  kill.c  kill.h  mockfile.c  off_t.h  pipe-internal.h  pipe.c  pipe.h  posix.h  process.c  process.h  processor.c  processor.h  section.c  section.h  strtok.h  time.c  time.h
src/core/: abort.c  abort.h  client.c  client.h  coroutine.h  ordered-set.c  report.c  report.h  runner.c  runner.h  runner_coroutine.c  runner_coroutine.h  stats.c  stats.h  test.c  theories.c  worker.c  worker.h
src/entry/: entry.c  options.c  params.c
src/io/: asprintf.c  asprintf.h  event.c  event.h  file.c  json.c  output.c  output.h  redirect.c  tap.c  xml.c
src/log/: logging.c  normal.c
src/protocol/: connect.c  connect.h  messages.c  messages.h  protocol.c  protocol.h
src/signals/: CMakeLists.txt  create_source.sh  signal_names.h  signal_names_default.c  signals.sh
src/string/: ext.c  extglobmatch.c  extglobmatch.h  extmatch.c  extmatch.h  glob_match.c  glob_match.h  i18n.c  i18n.h  lex.yy.c  main.c
test/cram/: pattern.t
